Bug 155723 - Drawing Toolbar: Wrong Tooltips for some of the Basic Shapes
Summary: Drawing Toolbar: Wrong Tooltips for some of the Basic Shapes
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:24.8.0
Keywords:
Depends on:
Blocks: ImpressDraw-Toolbars
  Show dependency treegraph
 
Reported: 2023-06-08 00:03 UTC by Don Matschull
Modified: 2024-03-06 19:42 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Don Matschull 2023-06-08 00:03:55 UTC
The Basic Shapes toolbar has a tool named "Regular Pentagon". However, the tool actually draws simple pentagons, not "regular" pentagons.

A pentagon is a shape with 5 sides. A regular pentagon has 5 equal sides and 5 equal angles.

For accuracy, and to avoid confusion, the name of this tool should be changed from "Regular Pentagon" to simply "Pentagon".
Comment 1 Rainer Bielefeld Retired 2023-06-08 18:12:06 UTC
Still REPRODUCIBLE with Server Installation of Version: 7.6.0.0.alpha0+ (X86_64) 
Build ID: 9f56dff12ba03b9acd7730a5a481eea045e468f3
CPU threads: 12; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: Locale: de-DE (de_DE); UI: de-DE; Theme: Automatic (Colibre)
Calc: CL threaded – Special new User Profile for testing

a) Already in 4.0.0, Probably inherited from OOo.

b) Also affects Translations, I also see Tooltip "Regelmäßiges Fünfeck" in German Translation

c) I did not find "Fünfeck" in Help, so might not be a problem there.

d) No DUPs found here 

e) UI might be better Component? I can't tell
Comment 2 Rainer Bielefeld Retired 2023-06-09 04:54:32 UTC
Additional to 
"Regular Pentagon" tool draws pentagons, not regular pentagons: Wrong Tooltip
I found a second wrong Tooltip:
"Cube" draws  cuboids (rectangular parallelepiped or right parallelepiped cuboids, rectangular parallelepipeds, right parallelepipeds, ...), not cubes.
And for this one I also found a wrong Help, see <https://help.libreoffice.org/7.7/en-US/text/simpress/02/10090000.html?&DbPAR=SHARED&System=WIN>!

a) I already found the 2 Tooltips wrong in German OOo 3.2.0, so Inherited!

f) Currently only confirmed for WIN
   @reporter: please contribute some System information
Comment 3 Julien Nabet 2024-02-19 21:45:44 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 4 Julien Nabet 2024-02-19 21:46:02 UTC
Patch submitted here:
https://gerrit.libreoffice.org/c/core/+/163606
Comment 5 Julien Nabet 2024-02-19 22:01:41 UTC
and for Cube, I've submitted
https://gerrit.libreoffice.org/c/core/+/163607

Before considering Help part, I'll wait a bit so people have some time to give their opinion.

Heiko/Xisco: Any opinion here?
Comment 6 Heiko Tietze 2024-02-20 07:59:25 UTC
+1 to both (Cuboid sounds a bit technical on the first glance but is the correct term).
Comment 7 Julien Nabet 2024-02-20 18:28:26 UTC
(In reply to Heiko Tietze from comment #6)
> +1 to both (Cuboid sounds a bit technical on the first glance but is the
> correct term).

Thank you for the feedback, let's push these then! :-)
Comment 8 Commit Notification 2024-02-20 18:28:38 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a67286aa0cf9c3bc5919343c428bb5485091104c

tdf#155723: Wrong Tooltips for some of the Basic Shapes (pentagon)

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2024-02-20 18:29:41 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a5ad209d33b35958b40a7e2444ba0d9f061055ec

tdf#155723: Wrong Tooltips for some of the Basic Shapes (cuboid)

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Julien Nabet 2024-02-22 15:43:39 UTC
Change in help part waiting for review here:
https://gerrit.libreoffice.org/c/help/+/163760
Comment 11 Commit Notification 2024-02-22 18:31:29 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/help/commit/d13c501f790c5130fa5b23da99be6b92770a08d4

Related tdf#155723: "Cube" is in fact "Cuboid"
Comment 12 Julien Nabet 2024-02-22 18:34:14 UTC
Since 24.2.0 has been published, I can't cherry-pick the changes in the branch 24.2
Let's put this one to FIXED.
Comment 13 Stanislav Horacek 2024-03-03 19:26:19 UTC
I am afraid that the same (the label describes only basic shapes inserted by default, not all variants) applies for other shapes as well, e.g. "spheroid" should be used instead of "sphere" etc. - change of "cube" to "cuboid" caused that the shape labels are now inconsistent.
Comment 14 Julien Nabet 2024-03-04 11:58:25 UTC
(In reply to Stanislav Horacek from comment #13)
> I am afraid that the same (the label describes only basic shapes inserted by
> default, not all variants) applies for other shapes as well, e.g. "spheroid"
> should be used instead of "sphere" etc. - change of "cube" to "cuboid"
> caused that the shape labels are now inconsistent.

Not sure, it seems proportions are ok to call them sphere and cube.
Comment 15 Stanislav Horacek 2024-03-04 19:11:00 UTC
(In reply to Julien Nabet from comment #14)
> Not sure, it seems proportions are ok to call them sphere and cube.
Yes, I would agree that the default shapes (with no modification key) are "cube" and "sphere", therefore I don't understand to current "cuboid" and "sphere".
Comment 16 Julien Nabet 2024-03-04 20:37:53 UTC
(In reply to Stanislav Horacek from comment #15)
> (In reply to Julien Nabet from comment #14)
> > Not sure, it seems proportions are ok to call them sphere and cube.
> Yes, I would agree that the default shapes (with no modification key) are
> "cube" and "sphere", therefore I don't understand to current "cuboid" and
> "sphere".

With basic shape, if you use "cuboid", depending on how you "draw" it, you can get a cube of course but also a rectangular cuboid.
I mean, you can get something like the illustration of https://en.wikipedia.org/wiki/Rectangular_cuboid (I wouldn't call this a cube indeed)
Comment 17 Julien Nabet 2024-03-04 20:40:28 UTC
About "sphere", I don't see "sphere" in "Basic shapes", I only see it in "3D objects" and when you "draw" one, you can't have something like "oblate" or "prolate" (see https://en.wikipedia.org/wiki/Spheroid).
Comment 18 Stanislav Horacek 2024-03-05 18:37:46 UTC
I see my confusion now - I was indeed referring to the "3D object" toolbar, which has not been changed, however its help page (which I was translating) was: https://help.libreoffice.org/24.8/en-US/text/simpress/02/10090000.html
I guess this change should be reverted.

On the other hand, the general cuboid should be mentioned here: https://help.libreoffice.org/24.8/en-US/text/shared/menu/insert_shape.html

And yes, "rectangular cuboid" is the term which I was looking for in order to use its counterpart in my language.
Comment 19 Julien Nabet 2024-03-05 19:25:53 UTC
(In reply to Stanislav Horacek from comment #18)
> I see my confusion now - I was indeed referring to the "3D object" toolbar,
> which has not been changed, however its help page (which I was translating)
> was: https://help.libreoffice.org/24.8/en-US/text/simpress/02/10090000.html
> I guess this change should be reverted.
> ...
Indeed!
Here's the patch waiting for review:
https://gerrit.libreoffice.org/c/help/+/164381
Comment 20 Commit Notification 2024-03-06 08:07:39 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/help/commit/cd7186fc1b3f63bc941f61fe95116da060bdb5da

Revert "Related tdf#155723: "Cube" is in fact "Cuboid""
Comment 21 Stanislav Horacek 2024-03-06 19:38:58 UTC
Perfect, thank you!
Comment 22 Julien Nabet 2024-03-06 19:42:17 UTC
(In reply to Stanislav Horacek from comment #21)
> Perfect, thank you!

You're welcome :-)