tdf#155723: Wrong Tooltips for some of the Basic Shapes (pentagon)

Change-Id: Ie6fd95177d4b62f00011cb382f97090963b2cf3f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163606
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>